// Jest Snapshot v1, https://jestjs.io/docs/snapshot-testing

exports[`Slider rtl render component should be rendered correctly in RTL direction 1`] = `
<div
  class="g-slider g-slider-rtl css-var-root g-slider-horizontal"
>
  <div
    class="g-slider-rail"
  />
  <div
    class="g-slider-track"
    style="right: 0%; width: 0%;"
  />
  <div
    class="g-slider-step"
  />
  <div
    aria-disabled="false"
    aria-orientation="horizontal"
    aria-valuemax="100"
    aria-valuemin="0"
    aria-valuenow="0"
    class="g-slider-handle"
    role="slider"
    style="right: 0%; transform: translateX(50%);"
    tabindex="0"
  />
</div>
`;

exports[`Slider should render in RTL direction 1`] = `
<div>
  <div
    class="g-slider g-slider-rtl css-var-root g-slider-horizontal"
  >
    <div
      class="g-slider-rail"
    />
    <div
      class="g-slider-track"
      style="right: 0%; width: 30%;"
    />
    <div
      class="g-slider-step"
    />
    <div
      aria-describedby="test-id"
      aria-disabled="false"
      aria-orientation="horizontal"
      aria-valuemax="100"
      aria-valuemin="0"
      aria-valuenow="30"
      class="g-slider-handle g-tooltip-open"
      role="slider"
      style="right: 30%; transform: translateX(50%);"
      tabindex="0"
    />
    <div
      class="g-tooltip g-zoom-big-fast-appear g-zoom-big-fast-appear-prepare g-zoom-big-fast g-tooltip-rtl g-tooltip-css-var css-var-root g-slider-tooltip g-tooltip-placement-top"
      style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
    >
      <div
        class="g-tooltip-arrow"
        style="position: absolute; bottom: 0px; left: 0px;"
      >
        <span
          class="g-tooltip-arrow-content"
        />
      </div>
      <div
        class="g-tooltip-container"
        id="test-id"
        role="tooltip"
      >
        30
      </div>
    </div>
  </div>
</div>
`;

exports[`Slider should show tooltip when hovering slider handler 1`] = `
<div
  class="g-tooltip g-tooltip-css-var css-var-root g-slider-tooltip g-tooltip-placement-top"
  style="--arrow-x: 0px; --arrow-y: 0px; left: -1000vw; top: -1000vh; right: auto; bottom: auto; box-sizing: border-box;"
>
  <div
    class="g-tooltip-arrow"
    style="position: absolute; bottom: 0px; left: 0px;"
  >
    <span
      class="g-tooltip-arrow-content"
    />
  </div>
  <div
    class="g-tooltip-container"
    id="test-id"
    role="tooltip"
  >
    30
  </div>
</div>
`;

exports[`Slider should show tooltip when hovering slider handler 2`] = `
<div
  class="g-tooltip g-tooltip-hidden g-tooltip-css-var css-var-root g-slider-tooltip g-tooltip-placement-top"
  style="--arrow-x: 0px; --arrow-y: 0px; left: 0px; top: auto; right: auto; bottom: 0px; box-sizing: border-box; pointer-events: none;"
>
  <div
    class="g-tooltip-arrow"
    style="position: absolute; bottom: 0px; left: 0px;"
  >
    <span
      class="g-tooltip-arrow-content"
    />
  </div>
  <div
    class="g-tooltip-container"
    id="test-id"
    role="tooltip"
  >
    30
  </div>
</div>
`;
